      PR c++/94385, PR c++/93931, PR c++/90995, PR c++/93597, PR c++/91377,
      PR c++/94453, PR d/94240, PR fortran/93686.
  * Don't install the empty gcc_lib_dir in gcc-N-base.

  [ Nicolas Boulenguez ]
  * Remove ada-lib-info-file-prefix-map.diff (see 87972).

  [ Matthias Klose ]
  * Fix local patch for PR jit/87808. Addresses: #954898.

 -- Matthias Klose <doko@debian.org>  Wed, 08 Apr 2020 12:53:55 +0200

gcc-9 (9.3.0-10) unstable; urgency=medium

  * Update to git 20200404 from the gcc-9 branch.
    - PR tree-optimization/93435, PR tree-optimization/94103, PR fortran/85982,
      PR ipa/94445, PR middle-end/94206, PR c++/91966, PR libstdc++/93960.

  [ Nicolas Boulenguez ]
  * Fix #954681 but preserve checksums in libgnat .ali files.

 -- Matthias Klose <doko@debian.org>  Sat, 04 Apr 2020 13:03:14 +0200

gcc-9 (9.3.0-9) unstable; urgency=medium

  * Update to git 20200402 from the gcc-9 branch.
    - Fix PR lto/94249, PR target/94052 (AArch64), PR c++/84733,
      PR fortran/94348, PR fortran/93484, PR target/94435 (AArch64),
      PR target/94368 (AArch64), PR target/92692 (AArch64),
      PR target/93819 (PPC), PR target/87583 (PPC), PR c++/90711,
      PR fortran/93498, PR fortran/94030, PR target/91833 (AArch64),
      PR target/91834 (AArch64).

  [ Matthias Klose ]
  * Update libstdc++6 symbols file for armel. Addresses: #954954.
  * Fix PR target/94368 (AArch64), proposed patch.

  [ Nicolas Boulenguez ]
  * ada-lib-info-source-date-epoch.diff: handle Invalid_Time. Closes: #954681.
  * Remove some dependencies older than oldoldstable.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Apr 2020 15:56:03 +0200

gcc-9 (9.3.0-8) unstable; urgency=medium

  * Update to git 20200324 from the gcc-9 branch.
    - Fix PR tree-optimization/94125, PR target/90763 (PPC).
  * libgcc-N-dev: Include sanitizer headers again. Closes: #954750.
  * gm2: Define lang_register_spec_functions for jit. Addresses: #954438.