@@ -16,6 +16,8 @@ gcc-9 (9.3.0-11) UNRELEASED; urgency=medium
 
   [ Matthias Klose ]
   * Fix local patch for PR jit/87808. Addresses: #954898.
+  * Don't include lib*gomp1 and libgcc4 in the control file, when not building
+    the common libraries.
 
  -- Matthias Klose <doko@debian.org>  Wed, 08 Apr 2020 12:53:55 +0200
 
